--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   "require": {
     "guzzlehttp/guzzle-services": "^1"
   },
+  "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
       "Davidnadejdin\\AlfabankClient\\": "src/"
